git-svn-id: https://odey-ops01.oam.odey.com/svn/odey/StoredProcedureGenerator@3877 a99c24c5-d062-0543-ab10-d6d61a48e989

--- a/StoredProcedureGenerator/StoredProcedureGenerator.csproj
+++ b/StoredProcedureGenerator/StoredProcedureGenerator.csproj
@@ -415,6 +415,9 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\MatchedStatus_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\MatchedStatus_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\MatchedStatus_Update.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\OfficialNetAssetValue_Delete.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\OfficialNetAssetValue_Insert.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\OfficialNetAssetValue_Update.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\PerformanceFeeType_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\PerformanceFeeType_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\PerformanceFeeType_Update.sql
@@ -591,6 +594,7 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\ListingStatus_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\Market_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\MatchedStatus_hst.sql
+..\Keeley\Schema Objects\Schemas\dbo\Tables\OfficialNetAssetValue_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\PerformanceFeeType_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\Periodicity_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\PeriodicityInterval_hst.sql
