git-svn-id: https://odey-ops01.oam.odey.com/svn/odey/StoredProcedureGenerator@5882 a99c24c5-d062-0543-ab10-d6d61a48e989

--- a/StoredProcedureGenerator/StoredProcedureGenerator.csproj
+++ b/StoredProcedureGenerator/StoredProcedureGenerator.csproj
@@ -130,6 +130,9 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\ClientPortfolioBridge_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\ClientPortfolioBridge_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\ClientPortfolioBridge_Update.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\ClientPortfolioByClientShareClass_Delete.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\ClientPortfolioByClientShareClass_Insert.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\ClientPortfolioByClientShareClass_Update.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\ClientPortfolioPeriodReturn_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\ClientPortfolioPeriodReturn_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\ClientPortfolioPeriodReturn_Update.sql
@@ -505,6 +508,7 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\ClientAccount_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\ClientPortfolio_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\ClientPortfolioBridge_hst.sql
+..\Keeley\Schema Objects\Schemas\dbo\Tables\ClientPortfolioByClientShareClass_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\ClientPortfolioPeriodReturn_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\ClientSubAccountAdministratorMapping_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\ClientSubType_hst.sql
