--- a/StoredProcedureGenerator/StoredProcedureGenerator.csproj
+++ b/StoredProcedureGenerator/StoredProcedureGenerator.csproj
@@ -76,6 +76,9 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\Administrator_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\Administrator_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\Administrator_Update.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\AnalystIdea_Delete.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\AnalystIdea_Insert.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\AnalystIdea_Update.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\Analytic_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\Analytic_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\Analytic_Update.sql
@@ -502,6 +505,7 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\Account_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\AccountMapping_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\Administrator_hst.sql
+..\Keeley\Schema Objects\Schemas\dbo\Tables\AnalystIdea_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\Analytic_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\AnalyticType_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\ApplicationUser_hst.sql
