PA Dealing Account + Broker changes
git-svn-id: https://odey-ops01.oam.odey.com/svn/odey/StoredProcedureGenerator@7698 a99c24c5-d062-0543-ab10-d6d61a48e989

--- a/StoredProcedureGenerator/StoredProcedureGenerator.csproj
+++ b/StoredProcedureGenerator/StoredProcedureGenerator.csproj
@@ -439,6 +439,9 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\PADealingBalance_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\PADealingBalance_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\PADealingBalance_Update.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\PADealingBroker_Delete.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\PADealingBroker_Insert.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\PADealingBroker_Update.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\PADealingRejectionReason_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\PADealingRejectionReason_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\PADealingRejectionReason_Update.sql
@@ -629,6 +632,7 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\PADealing_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\PADealingAccount_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\PADealingBalance_hst.sql
+..\Keeley\Schema Objects\Schemas\dbo\Tables\PADealingBroker_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\PADealingRejectionReason_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\PerformanceFeeType_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\Periodicity_hst.sql
